<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:background="#38d9dbf4"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/wpisz_login"
        android:textColor="#ffffff" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:background="#38d9dbf4"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:text="@string/wpisz_has_o"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/zaloguj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:background="#38d9dbf4"
        android:text="@string/zaloguj"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/tlo" />

</LinearLayout>